--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,7 @@
 	<classpathentry kind="lib" path="lib/okhttp-3.11.0.jar"/>
 	<classpathentry kind="lib" path="lib/okio-1.14.0.jar"/>
 	<classpathentry kind="lib" path="lib/guava-28.0-jre.jar"/>
+	<classpathentry kind="lib" path="lib/testng-6.14.0.jar"/>
+	<classpathentry kind="lib" path="lib/jcommander-1.71.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
